# nevClient2.0

./: .gitignore  Readme.md  pyproject.toml
nevclient/: Controller.py  __main__.py
nevclient/factories/: DAQMXFactory.py  NISCOPEFactory.py  PSAFactory.py  ParametersFactory.py  PulseFactory.py
nevclient/model/Enums/: DAQMXDeviceKind.py  NISCOPEChannelVerticalCoupling.py  NISCOPEChannelVerticalRange.py  NISCOPETriggerCoupling.py  NISCOPETriggerSlope.py  NISCOPETriggerType.py  PSAStatus.py  SamplingFreq.py  SweepDirection.py
nevclient/model/config/PSA/: ChannelConf.py  PSAData.py  PSAMode.py  PSASimulation.py  SweepConf.py  TimingConf.py
nevclient/model/config/Parameters/: CSVParameter.py  ParametersData.py
nevclient/model/config/Pulse/: PulseConf.py  PulseData.py  StimConf.py
nevclient/model/hardware/DAQMX/: DAO.py  DAQMXAnalogDevice.py  DAQMXChannel.py  (+8 more)
nevclient/services/Communication/: DAQMXComm.py  NISCOPEComm.py  PSAComm.py
nevclient/services/DataManipulation/: DAQMXDataServices.py  NISCOPEDataServices.py  PSADataServices.py  PulseDataServices.py
nevclient/services/Parsing/: DAQMXParsing.py  NISCOPEParsing.py  PSAParsing.py
nevclient/services/Processes/: PSAProcesses.py
nevclient/utils/: CSVWorker.py  DummyData.py  Logger.py  TCPClient.py  Theme.py
nevclient/views/: EntryFrame.py  PSAPanel.py  ParametersPanel.py  PulsePanel.py  SweeperPanel.py
nevclient/views/templates/: NevButton.py  NevCheckBox.py  NevComboBox.py  NevFrame.py  NevGrid.py  NevMenuBar.py  NevPSAPlot.py  NevPanel.py  NevPulsePlot.py  NevSpinCtrl.py  NevStatusBar.py  NevText.py
(+4 files in other folders)
